--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ExamModule4
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/exam_module4
+spring.datasource.username=root
+spring.datasource.password=trantheky0411
+
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
